Add GMM implementation ipython notebook

--- a/Gaussian_Mixture_Models.ipynb
+++ b/Gaussian_Mixture_Models.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Gaussian_Mixture_Models.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNabcg/gEEvaUXh8lrxhULE",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Vinohith/Gaussian_Mixture_model/blob/main/Gaussian_Mixture_Models.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
